fixed: logo bug was displaying too large on large screens because height was set to 'fit content' now has correct max width and height values

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header a {
     padding: 0 4px;
     height: 60px;
     width: 60px;
-    max-width: 200px;
+    max-width: 170px;
     max-height: 200px;
 }
 
